--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>js-fizzbuzz</title>
 </head>
 <body>
+    <main>
+        <div class="container">
+            <div class="row" id="frizz-buzz">
+                <div class="box">
+                    
+                </div>
+            </div>
+        </div>
+    </main>
     
     <script type="text/javascript"></script>
     <script type="text/javascript" src="./js/main.js"></script>
