--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>js-fizzbuzz</title>
 </head>
+
 <body>
     <main>
         <div class="container">
             <div class="row" id="frizz-buzz">
-                <div class="box">
-                    
+                <div class="text-center">
+                    <h1>FrizzBuzz Game</h1>
+                </div>
+                <div class="col-2 box">
+                    1
                 </div>
             </div>
         </div>
     </main>
-    
+
     <script type="text/javascript"></script>
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
+
 </html>
