--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
 <body>
     <main>
         <div class="container">
-            <div class="row" id="frizz-buzz">
+            <div class="row" id="fizz-buzz">
                 <div class="text-center">
-                    <h1>FrizzBuzz Game</h1>
-                </div>
-                <div class="col-2 box">
-                    1
+                    <h1>FizzBuzz Game</h1>
                 </div>
             </div>
         </div>
